--- a/views/administration/teams.hbs
+++ b/views/administration/teams.hbs
@@ -8,6 +8,18 @@
         <script src="/scripts/spectrum/init.js" type="text/javascript" defer></script>
     {{/content}}
     {{#content "page"}}
+        <form action="/administration/teams/disablestudents/{{school._id}}" method="post" class="edit-form-school">
+            <input type="hidden" name="_method" value="patch" />
+            <div class="form-group">
+                <label>
+                    <input type="checkbox" name="disablestudentteamcreation" value="true" {{#inArray "disableStudentTeamCreation" school.features}}checked{{/inArray}}>
+                    Schülern verbieten Teams anzulegen
+                    <p class="text-muted">Durch aktivieren dieser Option bestätigen Sie, dass Sie weisungsberechtigter Schul-Administrator sind und befugt sind,
+                    das Anlegen von Teams durch Schuler an Ihrer Schule zu deaktiveren. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.</p>
+                </label>
+            </div>
+            <button type="submit" class="btn btn-primary btn-submit">Speichern</button>
+        </form>
         <div class="route-administration">
             <section class="section-school section-default">
                 <div class="container-fluid">
