--- a/static/styles/administration/course.scss
+++ b/static/styles/administration/course.scss
@@ -1,4 +1,8 @@
-@import '../lib/colors';
+@import "../lib/colors";
+
+.btn.disabled {
+  pointer-events: auto !important;
+}
 
 .times {
   padding: 16px;
