--- a/views/administration/forms/form-message-owner.hbs
+++ b/views/administration/forms/form-message-owner.hbs
@@ -1,4 +1,4 @@
 <div class="form-group">
-    <label>Nachricht an Team Eigentümer</label>
+    <label>Nachrichtentext:</label>
     <textarea class="form-control linked" name="message" ></textarea>
 </div>
