--- a/views/administration/forms/form-remove-members.hbs
+++ b/views/administration/forms/form-remove-members.hbs
@@ -1,2 +1,2 @@
-<p>Sind Sie sich sicher, dass Sie alle Mitglieder ihrer Schule aus folgenden Element entfernen wollen?</p>
+<p>Bist du sicher, dass du alle Mitglieder deiner Schule aus diesem Team entfernen willst?</p>
 <input class="form-control" name="name" type="text" disabled />
