--- a/views/administration/forms/form-teams.hbs
+++ b/views/administration/forms/form-teams.hbs
@@ -1,13 +1,12 @@
 <input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}" />
 
 <div class="form-group">
-    <label>Team Owner:</label>
+    <label>Wähle hier einen zusätzlichen Eigentümer für das Team aus:</label>
     {{{course.name}}}
     <select class="form-control form-control-lg" type="text" name="userId">
-        <option value="">Neuen Owner auswählen</option>
+        <option value="">Neuen Eigentümer hinzufügen</option>
         {{#each users}}
             <option value="{{{this._id}}}">{{{this.firstName}}} {{{this.lastName}}}</option>
         {{/each}}
     </select>
 </div>
-
