--- a/views/administration/teams.hbs
+++ b/views/administration/teams.hbs
@@ -20,7 +20,8 @@
                     <div class="row">
                         <div class="col-sm-12 no-padding">
                             <center>
-                                <i class="fa fa-building-o team-flags"></i>
+                                <b>*Legende:</b>
+                                <i class="fa fa-home team-flags"></i>
                                 An eigener Schule gegründetes Team &emsp;
                                 <i class="fa fa-bus team-flags"></i>
                                 Beinhaltet Schul-externe Mitglieder &emsp;
