fixed tab-naming from SC-1287

--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -53,7 +53,7 @@
     </div>
     <section class="section-course">
       <div class="course-card">
-        <div class="tabContainer" active-tab={{activeTab}}>
+        <div class="tabContainer" data-active-tab={{activeTab}}>
           <div class="tabs" data-max-width="1024">
             <button class="tab" data-tab="js-topics">
               <span class="text">Themen <span class="count-badge" data-badge="{{lessons.length}}"/></span>
