--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -75,7 +75,7 @@
 
 
             <div class="course-card">
-                <div class="tabContainer" active-tab={{activeTab}}>
+                <div class="tabContainer" data-active-tab={{activeTab}}>
                     <div class="tabs" data-max-width="1024">
                         <button class="tab" data-tab="js-files">
                             <span class="text">Dateien</span>
