--- a/views/administration/teams.hbs
+++ b/views/administration/teams.hbs
@@ -15,7 +15,7 @@
                     <input type="checkbox" name="disablestudentteamcreation" value="true" {{#inArray "disableStudentTeamCreation" school.features}}checked{{/inArray}}>
                     Schülern verbieten Teams anzulegen
                     <p class="text-muted">Durch aktivieren dieser Option bestätigen Sie, dass Sie weisungsberechtigter Schul-Administrator sind und befugt sind,
-                    das Anlegen von Teams durch Schuler an Ihrer Schule zu deaktiveren. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.</p>
+                    das Anlegen von Teams durch Schüler an Ihrer Schule zu deaktiveren. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.</p>
                 </label>
             </div>
             <button type="submit" class="btn btn-primary btn-submit">Speichern</button>
