--- a/views/teams/overview-empty.hbs
+++ b/views/teams/overview-empty.hbs
@@ -25,7 +25,7 @@
             {{else}}
             <div class="text-wrapper mx-auto d-block">
                 <h3 class="h5 text-muted text-center">
-                    Der Administrator erlaubt das Anlegen von Teams durch Schüler in deiner Schule nicht. Wende dich bitte an einen Lehrer oder Administrator.
+                    Die Schule erlaubt das Anlegen von Teams durch Schüler in deiner Schule nicht. Wende dich bitte an einen Lehrer oder Administrator.
                 </h3>
             </div>
             {{/if}}
