--- a/views/teams/overview.hbs
+++ b/views/teams/overview.hbs
@@ -30,7 +30,7 @@
                 <div class="row padding-top">
                     <div class="col-sm-12">
                         <p>
-                            Der Administrator erlaubt das Anlegen von Teams durch Schüler in deiner Schule nicht.
+                            Die Schule erlaubt das Anlegen von Teams durch Schüler in deiner Schule nicht.
                             Wende dich bitte an einen Lehrer oder Administrator wenn du ein Team anlegen möchtest.
                         </p>
                     </div>
