--- a/views/news/overview.hbs
+++ b/views/news/overview.hbs
@@ -1,27 +1,54 @@
 {{#extend "news/news"}}
-    {{#content "page"}}
-        <div class="route-news">
-                {{#userHasPermission "SCHOOL_NEWS_EDIT"}}
-                    <a href="/news/new" class="btn btn-primary btn-add create pull-right mb-2">
-                        <i class="fa fa-plus" aria-hidden="true"></i> News hinzufügen
-                    </a>
-                {{/userHasPermission}}
+{{#content "page"}}
+<div class="route-news">
+    {{#userHasPermission "SCHOOL_NEWS_EDIT"}}
+    <a href="/news/new" class="btn btn-primary btn-add create pull-right mb-2">
+        <i class="fa fa-plus" aria-hidden="true"></i> News hinzufügen
+    </a>
+    {{/userHasPermission}}
+    {{#if unpublishedNews.total}}
+    <div class="tabContainer">
+        <div class="tabs" data-max-width="1024">
+            <button class="tab active" data-tab="a">
+                <span class="text count-badge">Veröffentlicht</span>
+            </button>
+            <button class="tab" data-tab="b">
+                <span class="text count-badge" data-badge="{{unpublishedNews.total}}">Unveröffentlicht</span>
+            </button>
+            <div class="indicator" style="left: 0px; right: 583.5px;"></div>
+        </div>
+    </div>
+    <div class="sectionsContainer">
+        <div class="section" data-section="a">
             {{> 'dashboard/components/card_section' section-id="news" title="" content=news link-text="Weiterlesen"}}
             <div class="container">
                 {{> "lib/components/pagination" settings=pagination }}
             </div>
         </div>
-        {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
-            {{#content "body"}}
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary btn-close">
-                        Abbrechen
-                    </button>
-                    <button type="submit" class="btn btn-primary btn-submit">
-                        Löschen
-                    </button>
-                </div>
-            {{/content}}
-        {{/embed}}
-    {{/content}}
+        <div class="section" data-section="b">
+            {{> 'dashboard/components/card_section' section-id="news-unpublished" title="" content=unpublishedNews.data link-text="Weiterlesen"}}
+        </div>
+    </div>
+    {{else}}
+    <div>
+        {{> 'dashboard/components/card_section' section-id="news" title="" content=news link-text="Weiterlesen"}}
+        <div class="container">
+            {{> "lib/components/pagination" settings=pagination }}
+        </div>
+    </div>
+    {{/if}}
+</div>
+{{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
+{{#content "body"}}
+<div class="modal-footer">
+    <button type="button" class="btn btn-secondary btn-close">
+        Abbrechen
+    </button>
+    <button type="submit" class="btn btn-primary btn-submit">
+        Löschen
+    </button>
+</div>
+{{/content}}
+{{/embed}}
+{{/content}}
 {{/extend}}
