--- a/views/news/overview.hbs
+++ b/views/news/overview.hbs
@@ -19,14 +19,16 @@
         </div>
     </div>
     <div class="sectionsContainer">
-        <div class="section" data-section="a">
-            {{> 'dashboard/components/card_section' section-id="news" title="" content=news link-text="Weiterlesen"}}
-            <div class="container">
-                {{> "lib/components/pagination" settings=pagination }}
+        <div class="sections">
+            <div class="section" data-section="a">
+                {{> 'dashboard/components/card_section' section-id="news" title="" content=news link-text="Weiterlesen"}}
+                <div class="container">
+                    {{> "lib/components/pagination" settings=pagination }}
+                </div>
             </div>
-        </div>
-        <div class="section" data-section="b">
-            {{> 'dashboard/components/card_section' section-id="news-unpublished" title="" content=unpublishedNews.data link-text="Weiterlesen"}}
+            <div class="section" data-section="b">
+                {{> 'dashboard/components/card_section' section-id="news-unpublished" title="" content=unpublishedNews.data link-text="Weiterlesen"}}
+            </div>
         </div>
     </div>
     {{else}}
