--- a/views/news/overview.hbs
+++ b/views/news/overview.hbs
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="section" data-section="b">
-                {{> 'dashboard/components/card_section' section-id="news-unpublished" title="" content=unpublishedNews.data link-text="Weiterlesen"}}
+                {{> 'dashboard/components/card_section' section-id="news" title="" content=unpublishedNews.data link-text="Weiterlesen"}}
             </div>
         </div>
     </div>
