show new badge in tab

--- a/views/news/overview.hbs
+++ b/views/news/overview.hbs
@@ -10,10 +10,11 @@
     <div class="tabContainer">
         <div class="tabs" data-max-width="1024">
             <button class="tab active" data-tab="a">
-                <span class="text count-badge">Veröffentlicht</span>
+                <span class="text">Veröffentlicht</span>
             </button>
             <button class="tab" data-tab="b">
-                <span class="text count-badge" data-badge="{{unpublishedNews.total}}">Unveröffentlicht</span>
+                <span class="text">Unveröffentlicht <span class="count-badge"
+                        data-badge="{{unpublishedNews.total}}" /></span></span>
             </button>
             <div class="indicator" style="left: 0px; right: 583.5px;"></div>
         </div>
