--- a/views/administration/teams.hbs
+++ b/views/administration/teams.hbs
@@ -1,6 +1,7 @@
 {{#extend "administration/administration"}}
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/administration/course.css"/>
+        <link rel="stylesheet" href="/styles/administration/teams.css"/>
         <link rel="stylesheet" href="/styles/lib/spectrum/spectrum.css"/>
     {{/content}}
     {{#content "scripts" mode="append"}}
@@ -10,12 +11,12 @@
     {{#content "page"}}
         <form action="/administration/teams/disablestudents/{{school._id}}" method="post" class="edit-form-school">
             <input type="hidden" name="_method" value="patch" />
-            <div class="form-group">
+            <div class="form-group" id="enableStudentsTeamsCreate">
                 <label>
                     <input type="checkbox" name="disablestudentteamcreation" value="true" {{#inArray "disableStudentTeamCreation" school.features}}checked{{/inArray}}>
-                    Schülern verbieten Teams anzulegen
-                    <p class="text-muted">Durch aktivieren dieser Option bestätigen Sie, dass Sie weisungsberechtigter Schul-Administrator sind und befugt sind,
-                    das Anlegen von Teams durch Schüler an Ihrer Schule zu deaktiveren. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.</p>
+                    Schülern verbieten, Teams anzulegen
+                    <p class="text-muted">Durch das Aktivieren dieser Option bestätigen Sie, dass Sie weisungsberechtigter Schul-Administrator sind und befugt sind,
+                    das Anlegen von Teams durch Schüler an Ihrer Schule zu (de)aktiveren. Ihr Klick gilt insofern als Weisung der Schule gegenüber dem HPI.</p>
                 </label>
             </div>
             <button type="submit" class="btn btn-primary btn-submit">Speichern</button>
