--- a/views/authentication/section.hbs
+++ b/views/authentication/section.hbs
@@ -1,4 +1,4 @@
-<section class="section {{class}}">
+<section class="section {{style}}">
 	<div class="container container-content {{class}}">
 		{{#block "body"}}{{/block}}
 	</div>
