--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -28,7 +28,12 @@
                         <img alt='Jetzt bei Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/de_badge_web_generic.png' height="70"/>
                     </a>
                 </div>
-            </div>
+				<h4 class="card-title">Stellenausschreibungen</h4>
+				<div class="form-group">
+					Du möchtest gerne Mitglied in unserem HPI Schul-Cloud Team werden? Wir suchen:
+				</div>
+				<a href="https://hpi.de/das-hpi/organisation/jobs/aktuelle-jobs/internettechnologien/web-developer-im-projekt-schul-cloud.html" rel="noopener" target="_blank">Web Developer</a>
+</div>
         </div>
     </div>
 </footer>
