add chat to legend

--- a/views/administration/teams.hbs
+++ b/views/administration/teams.hbs
@@ -39,7 +39,9 @@
                                 <i class="fa fa-bus team-flags"></i>
                                 Beinhaltet Schul-externe Mitglieder &emsp;
                                 <i class="fa fa-briefcase team-flags"></i>
-                                Team hat Eigentümer
+                                Team hat Eigentümer &emsp;
+                                <i class="fa fa-comments team-flags"></i>
+                                Chat ist aktiviert
                             </center>
                         </div>
                     </div>
